--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 	</div>
 
 	
-	<script src="http://code.jquery.com/jquery-2.2.4.min.js"></script>
+	<script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
 	<script src="js/jquery-ui.min.js"></script>
 	<script src="js/main.js"></script> 
 	
