Design: change close button symbol

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		<div class="popup-message">
 			<h2>Содержимое папки:</h2>
 			<ul class="popup-text sortable"></ul>
-			<button class="close-btn">Х</button>
+			<button class="close-btn">&#x2715;</button>
 		</div>
 	</div>
 
